--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,12 +9,12 @@ html{
 
 body{
     background: $background;
-    font-family:$font-stack;
+    font-family:$font-stack!important;
 
 }
 
 a{
-    text-decoration: none;
+    text-decoration: none!important;
 }
 
 li{
