--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,5 +1,5 @@
   .carousel-item {
-    height: 430px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,6 +11,7 @@
       object-fit: cover; 
       border-radius: 8px; 
       transition: transform 0.3s ease;
+      filter: grayscale(100%);
 
       &:hover {
         transform: scale(1.05); 
