--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -17,7 +17,9 @@
 
         .about-left {
             flex: 1;
-            @include flex-center;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
             padding-top: 10vh;
 
             .image-box {
@@ -38,18 +40,36 @@
 
         .about-right {
             flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            gap: 20px;
-            padding-top: 10vh;
+            @include flex-start;
+            padding-top: 5vh;
 
-            .about-box{
-                width: 700px;
-                border: 2px solid $primary-font-color;
-                padding: 20px;
-                border-radius: 8px;
+            .about-right-container {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                .about-box {
+                    width: 700px;
+                    padding: 10px;
+                    border-radius: 8px;
+
+                    .phrase {
+                        color: $secondary-font-color;
+                        transition-property: color;
+                        transition-timing-function: ease;
+
+                        @for $i from 1 through 7 {
+                            &:nth-child(#{$i}) {
+                                transition-delay: $i * 0.3s;
+                            }
+                        }
+
+                        &.active {
+                           color: $primary-font-color;
+                        }
+                    }
+
+                }
             }
         }
     }
