--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,6 +1,6 @@
 @import "../styles/variables.scss";
 
-%section{
+%section {
   min-height: 100vh;
   width: 100%;
   position: relative;
@@ -9,21 +9,37 @@
 }
 
 %full-screen-fixed {
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+}
+
+%contact-input {
+  background-color: $input-bg;
+  border: none;
+  border-radius: 8px;
+  padding: 15px;
+  color: $primary-font-color;
+  font-family: inherit;
+  font-size: inherit;
 }
 
 
 // mixin for commion styles
 
-@mixin flex-center($direction: row){
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: $direction;
+@mixin flex-center($direction: row) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: $direction;
+}
+
+@mixin flex-start {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 @mixin button-links {
