--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -15,16 +15,39 @@
     .about-container {
         display: flex;
 
+        @include lg{
+            flex-direction: column;
+            align-items: center;
+        }
+
         .about-left {
             flex: 1;
             display: flex;
-            align-items: center;
             flex-direction: column;
+            align-items: center;
+            justify-content: center;
             padding-top: 10vh;
 
             .image-box {
                 width: 500px;
                 height: 500px;
+
+                @include xl {
+                    width: 450px;
+                    height: 450px;
+                }
+                @include md {
+                    width: 400px;
+                    height: 400px;
+                }
+                @include sm {
+                    width: 350px;
+                    height: 350px;
+                }
+                @include xs {
+                    width: 300px;
+                    height: 300px;
+                }
 
 
                 img {
@@ -53,21 +76,59 @@
                     padding: 10px;
                     border-radius: 8px;
 
-                    .phrase {
-                        color: $secondary-font-color;
-                        transition-property: color;
-                        transition-timing-function: ease;
+                    @include lg {
+                        width: 900px;
+                    }
+                    @include md {
+                        width: 700px;
+                    }
+                    @include sm {
+                        width: 600px;
+                    }
+                    @include xs {
+                        width: 350px;
+                    
+                        
+                    }
 
-                        @for $i from 1 through 7 {
-                            &:nth-child(#{$i}) {
-                                transition-delay: $i * 0.3s;
-                            }
+                    p{
+                        @include xl {
+                            width: 85ch;
+                            
                         }
-
-                        &.active {
-                           color: $primary-font-color;
+                        @include lg {
+                            width: 110ch;
+                            margin-left: 1.5rem;
+                        }
+                        @include lg {
+                            width: 90ch;
+                        }
+                        @include sm {
+                            width: 75ch;
+                            margin-left: 20px;
+                        }
+                        @include xs {
+                            width: 45ch;
+                            margin-left: 0;
+                        }
+                        .phrase {
+                            color: $secondary-font-color;
+                            transition-property: color;
+                            transition-timing-function: ease;
+    
+                            @for $i from 1 through 7 {
+                                &:nth-child(#{$i}) {
+                                    transition-delay: $i * 0.3s;
+                                }
+                            }
+    
+                            &.active {
+                               color: $primary-font-color;
+                            }
+    
                         }
                     }
+
 
                 }
             }
