--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -4,28 +4,23 @@
 
 #contact {
     @extend %section;
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 10vh;
     
     .contact-title{
             text-align: center;
             font-size: 2rem;
-            opacity: 0;
+      
     }
-        &.active{
-        opacity: 1;
-        transform: translateY(0);
-        }
     
 
     .contact-container{
         display: flex;
-        opacity: 0;
-        transition: all 0.5s ease-out;
 
-        &.active{
-        opacity: 1;
-        transform: translateY(0);
+        @include md {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
     
         .contact-left{
@@ -35,11 +30,14 @@
             flex-direction: column;
             padding-top: 10vh;
 
-
            .contact-info{
             display: flex;
             flex-direction: column;
             padding-top: 10vh;
+
+            @include sm {
+                padding-top: 5vh;
+            }
             .contact-info-box{
                 display: flex;
                 align-items: center;
@@ -61,12 +59,35 @@
             flex:1;
             @include flex-start;
             padding-top: 10vh;
+            
+            @include lg{
+                margin-right: 3rem;
+            }
+            @include md{
+                margin-right: 0rem;
+            }
             form {
                 background-color: $background-alt;
                 width: 700px;
                 padding: 20px;
-                border-radius: 20px;
+                border-radius: 8px;
                 font-size: 1rem;
+
+                @include xl {
+                    width: 600px;
+                }
+                @include lg {
+                    width: 500px;
+                }
+                @include md {
+                    width: 600px;
+                }
+                @include sm {
+                    width: 500px;
+                }
+                @include xs {
+                    width: 350px;
+                }
                 .grid-container {
                     display: grid;
                     grid-template-columns: repeat(2, 1fr);
@@ -83,6 +104,10 @@
 
                         input {
                             @extend %contact-input;
+
+                            @include sm {
+                                width: 100%;
+                            }
 
                             &:focus {
                                 outline: none;
