--- a/src/components/Portfolio/Portfolio.scss
+++ b/src/components/Portfolio/Portfolio.scss
@@ -38,8 +38,18 @@
       width: 350px;
 
     }
+    @include md{
+      width: 300px;
+      height: 200px;
+    }
     @include sm {
-      width: 350px;
+      width: 400px;
+      height: 250px;
+
+    }
+    @include xs {
+      width: 300px;
+      height: 200px;
 
     }
     &:hover {
@@ -94,6 +104,15 @@
     transition: color 0.3s ease;
     @include xl{
       width: 350px;
+    }
+    @include md{
+      width: 300px;
+    }
+    @include sm{
+      width: 400px;
+    }
+    @include xs{
+      width: 300px;
     }
     a {
       @include button-links;
