--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -15,7 +15,7 @@
     .about-container {
         display: flex;
 
-        @include lg{
+        @include lg {
             flex-direction: column;
             align-items: center;
         }
@@ -31,19 +31,23 @@
             .image-box {
                 width: 500px;
                 height: 500px;
+                margin-top: 80px;
 
                 @include xl {
                     width: 450px;
                     height: 450px;
                 }
+
                 @include md {
                     width: 400px;
                     height: 400px;
                 }
+
                 @include sm {
                     width: 350px;
                     height: 350px;
                 }
+
                 @include xs {
                     width: 300px;
                     height: 300px;
@@ -64,7 +68,7 @@
         .about-right {
             flex: 1;
             @include flex-start;
-            padding-top: 5vh;
+            padding-top: 10vh;
 
             .about-right-container {
                 display: flex;
@@ -73,59 +77,87 @@
 
                 .about-box {
                     width: 700px;
-                    padding: 10px;
                     border-radius: 8px;
 
-                    @include lg {
-                        width: 900px;
+                    &:nth-child(2) {
+                        position: relative;
+                        overflow: hidden;
+                        padding: 10px 10px;
                     }
+
+                    .overlay {
+                        position: absolute;
+                        inset: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: rgba(0, 0, 0, 0.5);
+                        pointer-events: none;
+                    }
+
+                    @include lg {
+                        width: 800px;
+                    }
+
                     @include md {
                         width: 700px;
                     }
+
                     @include sm {
                         width: 600px;
                     }
+
                     @include xs {
                         width: 350px;
-                    
-                        
+
+
                     }
 
-                    p{
+                    p {
+                        font-size: 1.1rem;
+                        margin-left: 20px;
+
                         @include xl {
-                            width: 85ch;
-                            
-                        }
-                        @include lg {
-                            width: 110ch;
-                            margin-left: 1.5rem;
-                        }
-                        @include lg {
-                            width: 90ch;
-                        }
-                        @include sm {
                             width: 75ch;
-                            margin-left: 20px;
+
                         }
+
+                        @include lg {
+                            font-size: 1rem;
+                            width: 90ch;
+                            margin-left: 50px;
+                        }
+
+                        @include md {
+                            width: 75ch;
+                        }
+
+                        @include sm {
+                            font-size: 0.9rem;
+                            width: 75ch;
+                            margin-left: 40px;
+                         
+                        }
+
                         @include xs {
                             width: 45ch;
-                            margin-left: 0;
+                            margin-left: 20px;
                         }
+
                         .phrase {
                             color: $secondary-font-color;
                             transition-property: color;
                             transition-timing-function: ease;
-    
+
                             @for $i from 1 through 7 {
                                 &:nth-child(#{$i}) {
                                     transition-delay: $i * 0.3s;
                                 }
                             }
-    
+
                             &.active {
-                               color: $primary-font-color;
+                                color: $primary-font-color;
                             }
-    
+
                         }
                     }
 
